<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.LoginFragment">

    <data>

        <variable
            name="loginViewModel"
            type="apps.app.altcompany.pages.auth.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/rl_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp10w"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp150w"
                    android:layout_height="@dimen/dp150h"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp10h"
                    android:background="@drawable/border_white_accent_round"
                    android:gravity="center">


                    <apps.app.altcompany.customViews.views.CustomEditText
                        android:id="@+id/edt_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp5w"
                        android:layout_marginEnd="@dimen/dp5w"
                        android:gravity="center"
                        android:hint="@string/hint_email"
                        android:inputType="text"
                        android:padding="@dimen/dp5w"
                        android:paddingStart="@dimen/dp10w"
                        android:paddingEnd="@dimen/dp10w"
                        android:text="@={loginViewModel.loginRequest.email}"
                        android:textColorHint="@color/colorBlack"
                        android:textSize="@dimen/sp11"
                        android:textStyle="bold"
                        app:error="@={loginViewModel.loginRequest.emailError}"
                        app:met_errorColor="@android:color/holo_red_dark"
                        app:met_hideUnderline="true"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_underlineColor="@color/colorPrimary" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp10h"
                    android:background="@drawable/border_white_accent_round"
                    android:gravity="center"
                    android:orientation="vertical">


                    <apps.app.altcompany.customViews.views.CustomEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp5w"
                        android:layout_marginEnd="@dimen/dp5w"
                        android:gravity="center"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="@dimen/dp5w"
                        android:paddingStart="@dimen/dp10w"
                        android:paddingEnd="@dimen/dp10w"
                        android:text="@={loginViewModel.loginRequest.password}"
                        android:textColorHint="@color/colorBlack"
                        android:textSize="@dimen/sp11"
                        android:textStyle="bold"
                        app:error="@={loginViewModel.loginRequest.passwordError}"
                        app:met_errorColor="@android:color/holo_red_dark"
                        app:met_hideUnderline="true"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_underlineColor="@color/colorPrimary" />
                </RelativeLayout>

                <apps.app.altcompany.customViews.views.CustomTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dp10h"
                    android:gravity="end"
                    android:onClick="@{() -> loginViewModel.forgetPassword()}"
                    android:text="@string/label_forget_password_question"
                    android:textSize="@dimen/sp15"
                    android:textStyle="bold" />


                <apps.app.altcompany.customViews.views.CustomTextViewMedium
                    style="@style/btn_submit_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10h"
                    android:onClick="@{() -> loginViewModel.loginPhone()}"
                    android:paddingStart="@dimen/dp70h"
                    android:paddingEnd="@dimen/dp70h"
                    android:text="@string/label_login"
                    android:textSize="@dimen/sp15"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10h"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp5w"
                        android:layout_weight="1"
                        android:background="@drawable/border_accent_round"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp3h"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/img_login_facebook"
                            android:layout_width="@dimen/dp30w"
                            android:layout_height="@dimen/dp30h"
                            android:layout_gravity="start"
                            android:src="@drawable/ic_facebook" />

                        <apps.app.altcompany.customViews.views.CustomTextViewMedium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:src="@drawable/ic_facebook"
                            android:text="@string/label_facebook"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp14" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp5w"
                        android:layout_weight="1"
                        android:background="@drawable/border_accent_round"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp3h"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/img_login_google"
                            android:layout_width="@dimen/dp30w"
                            android:layout_height="@dimen/dp30h"
                            android:layout_gravity="start"
                            android:src="@drawable/ic_google" />

                        <apps.app.altcompany.customViews.views.CustomTextViewMedium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:src="@drawable/ic_google"
                            android:text="@string/label_google"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/sp14" />

                    </LinearLayout>


                </LinearLayout>


                <apps.app.altcompany.customViews.views.CustomTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp10h"
                    android:gravity="center"
                    android:onClick="@{() -> loginViewModel.register()}"
                    android:text="@string/label_create_new_account"
                    android:textSize="@dimen/sp15"
                    android:textStyle="bold" />
            </LinearLayout>


        </ScrollView>

    </RelativeLayout>
</layout>