<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.LoginFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="changePasswordViewModel"
            type="apps.app.altcompany.pages.auth.changePassword.ChangePasswordViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10w"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp100w"
                android:layout_height="@dimen/dp100h"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@drawable/border_white_accent_round"
                android:gravity="center">

                <apps.app.altcompany.customViews.views.CustomEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp5w"
                    android:layout_marginEnd="@dimen/dp5w"
                    android:gravity="center"
                    android:hint="@string/label_old_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp5w"
                    android:paddingStart="@dimen/dp10w"
                    android:paddingEnd="@dimen/dp10w"
                    android:text="@={changePasswordViewModel.request.oldPassword}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="@{changePasswordViewModel.passingObject!=null &amp;&amp; changePasswordViewModel.passingObject.id==1?View.GONE:View.VISIBLE,default=gone}"
                    app:met_errorColor="@android:color/holo_red_dark"
                    app:met_hideUnderline="true"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_underlineColor="@color/colorPrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@drawable/border_white_accent_round"
                android:gravity="center">


                <apps.app.altcompany.customViews.views.CustomEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp5w"
                    android:layout_marginEnd="@dimen/dp5w"
                    android:gravity="center"
                    android:hint="@string/label_new_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp5w"
                    android:paddingStart="@dimen/dp10w"
                    android:paddingEnd="@dimen/dp10w"
                    android:text="@={changePasswordViewModel.request.newPassword}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:met_errorColor="@android:color/holo_red_dark"
                    app:met_hideUnderline="true"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_underlineColor="@color/colorPrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10h"
                android:background="@drawable/border_white_accent_round"
                android:gravity="center">


                <apps.app.altcompany.customViews.views.CustomEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp5w"
                    android:layout_marginEnd="@dimen/dp5w"
                    android:gravity="center"
                    android:hint="@string/hint_password_confirm"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp5w"
                    android:paddingStart="@dimen/dp10w"
                    android:paddingEnd="@dimen/dp10w"
                    android:text="@={changePasswordViewModel.request.confirmPassword}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:met_errorColor="@android:color/holo_red_dark"
                    app:met_hideUnderline="true"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_underlineColor="@color/colorPrimary" />
            </RelativeLayout>


            <apps.app.altcompany.customViews.views.CustomTextViewRegular
                style="@style/btn_submit_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10h"
                android:onClick="@{() -> changePasswordViewModel.submit()}"
                android:paddingStart="@dimen/dp70h"
                android:paddingEnd="@dimen/dp70h"
                android:text="@string/label_save"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>