<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.SuggestionFragment">

    <data>

        <variable
            name="suggestionViewModel"
            type="apps.app.altcompany.pages.settings.viewModels.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/rl_suggestion_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20w"
            android:layout_marginTop="@dimen/dp20w"
            android:layout_marginEnd="@dimen/dp20w"
            android:layout_marginBottom="@dimen/dp10h"
            app:cardCornerRadius="@dimen/dp8h"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent">

            <apps.app.altcompany.customViews.views.CustomEditText
                android:id="@+id/edt_suggstion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp5w"
                android:layout_marginEnd="@dimen/dp5w"
                android:gravity="start"
                android:hint="@string/title"
                android:inputType="text"
                android:padding="@dimen/dp5w"
                android:paddingStart="@dimen/dp10w"
                android:paddingEnd="@dimen/dp10w"
                android:text="@={suggestionViewModel.suggestionsRequest.suggestions_title}"
                android:textColorHint="@color/colorBlack"
                android:textSize="@dimen/sp11"
                android:textStyle="bold"
                app:met_errorColor="@android:color/holo_red_dark"
                app:met_hideUnderline="true"
                app:met_primaryColor="@color/colorPrimary"
                app:met_underlineColor="@color/colorPrimary" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/rl_suggestion_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp20w"
            android:layout_marginEnd="@dimen/dp20w"
            android:layout_marginBottom="@dimen/dp10h"
            app:cardCornerRadius="@dimen/dp8h"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/btn_submit_primary"
            app:layout_constraintTop_toBottomOf="@+id/rl_suggestion_title">

            <apps.app.altcompany.customViews.views.CustomEditText
                android:id="@+id/edt_complain_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp3h"
                android:gravity="start"
                android:hint="@string/write_a_description"
                android:padding="@dimen/dp5w"
                android:text="@={suggestionViewModel.suggestionsRequest.suggestions_text}"
                android:textSize="@dimen/sp11"
                app:met_errorColor="@android:color/holo_red_dark"
                app:met_floatingLabel="none"
                app:met_hideUnderline="true"
                app:met_primaryColor="@color/colorPrimary"
                app:met_underlineColor="@color/colorPrimary" />
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit_primary"
            style="@style/btn_submit_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20w"
            android:layout_marginEnd="@dimen/dp20w"
            android:layout_marginBottom="@dimen/dp10h"
            android:onClick="@{() -> suggestionViewModel.suggestionSubmit()}"
            android:paddingStart="@dimen/dp70h"
            android:paddingEnd="@dimen/dp70h"
            android:text="@string/action_send"
            android:textSize="@dimen/sp15"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>